--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,14 @@
-body {
-  background-image: url("./assets/gradient-violet-bg.jpg");
+html {
+  background: url("./assets/gradient-violet-bg.jpg") no-repeat center center
+    fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
-.background {
-  height: 95vh;
-  position: relative;
-  width: 100%;
-  background-image: url("./assets/gradient-violet-bg.jpg");
-  background-position: 50% 50%;
-  background-size: cover;
-  background-color: #331a5c;
+body {
+  font-family: Roboto, sans-serif;
 }
 
 .logo {
@@ -23,16 +22,16 @@ body {
 
 #menu {
   display: flex;
-  position: relative;
+  position: sticky;
   float: right;
 }
 
 .menuItem {
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 500;
   display: flex;
   height: auto;
-  padding: 15px;
+  padding: 20px;
   margin-top: 12px;
   color: #fff;
 }
@@ -40,17 +39,14 @@ body {
 #menuButton {
   width: 104px;
   background-color: transparent;
+  color: white;
   height: 27px;
   margin-top: 26px;
   margin-left: 40px;
   padding-top: 10px;
   padding: 0px;
   float: right;
-  border: 1px solid transparent;
-  border-top-color: transparent;
-  border-right-color: transparent;
-  border-bottom-color: transparent;
-  border-left-color: transparent;
+  border: 1px solid white;
   border-radius: 3px;
   font-size: 14px;
   line-height: 27px;
@@ -63,4 +59,130 @@ body {
 .links {
   text-decoration: none;
   color: white;
+}
+
+.laptopContainer {
+  max-width: 860px;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  margin-top: 100px;
+  padding-bottom: 100px;
+}
+
+.laptopPic {
+  width: 100%;
+  max-width: 610px;
+  margin-bottom: 30px;
+}
+
+.laptopContainer h1 {
+  margin-top: 0px;
+  margin-bottom: 30px;
+  color: #fff;
+  font-size: 46px;
+  line-height: 54px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.laptopContainer p {
+  max-width: 560px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 30px;
+  float: none;
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+  line-height: 1.4;
+}
+
+.kastButton {
+  min-width: 215px;
+  padding: 0px 16px;
+  float: none;
+  clear: both;
+  border-style: solid;
+  border-width: 1px;
+  border-color: rgba(254, 144, 0, 0);
+  border-radius: 3px;
+  background-color: #fe9000;
+  -webkit-transition: border 300ms ease;
+  transition: border 300ms ease;
+  color: #fff;
+  font-size: 18px;
+  line-height: 44px;
+  font-weight: 700;
+  text-align: center;
+  letter-spacing: 1.44px;
+  text-indent: 1.44px;
+  text-transform: uppercase;
+  white-space: nowrap;
+  background-clip: padding-box;
+  -o-object-fit: fill;
+  object-fit: fill;
+  text-decoration: none;
+}
+
+.bottomContainer {
+  display: block;
+  padding-top: 110px;
+  padding-bottom: 110px;
+  background-color: #fff;
+}
+
+.bottomContainer h3 {
+  text-align: center;
+}
+
+#featureImages {
+  display: grid;
+  grid-auto-columns: 1fr;
+  max-width: 880px;
+  margin-right: auto;
+  margin-bottom: 75px;
+  margin-left: auto;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  grid-column-gap: 140px;
+  grid-row-gap: 80px;
+  -ms-grid-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-rows: auto;
+  grid-template-rows: auto;
+}
+
+.bottomContainer p {
+  font-size: 20px;
+  text-align: center;
+  color: #434146;
+}
+
+.secondBottomContainer {
+  font-size: 14px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-top: 110px;
+  padding-bottom: 110px;
+  background-image: url("./assets/green-bg.jpg");
+  background-position: 0px 0px;
+  background-size: cover;
+  color: #fff;
+}
+
+.secondBottomContainer h1 {
+  text-align: center;
+}
+
+.secondBottomContainer p {
+  margin-bottom: 30px;
+  font-size: 20px;
+  line-height: 34px;
+  text-align: center;
+  max-width: 640px;
+  margin-right: auto;
+  margin-left: auto;
 }
